--- a/app/components/home.module.scss
+++ b/app/components/home.module.scss
@@ -191,7 +191,8 @@
 }
 
 .chat-item-selected {
-  border-color: var(--primary);
+  // border-color: var(--primary);
+  border-color: #28b446;
 }
 
 .chat-item-title {
