--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -109,7 +109,7 @@ body {
   overflow: hidden;
 
   @media only screen and (max-width: 600px) {
-    background-color: var(--white);
+    background-color: var(--second);
   }
 
   *:focus-visible {
