--- a/app/components/chat.module.scss
+++ b/app/components/chat.module.scss
@@ -670,7 +670,7 @@
   flex: 1;
   border: 1px solid transparent;
   background:
-    linear-gradient(white, white) padding-box,
+    linear-gradient(#fafafa, #fafafa) padding-box,
     linear-gradient(45deg, #fff2eb, #caffd6, #dcdaff) border-box;
   box-shadow: 0px 0px 22px 0px rgba(204, 192, 249, 0.25);
 }
@@ -728,19 +728,46 @@
 }
 
 .chat-input {
+  // height: 100%;
+  // width: 100%;
+  // border-radius: 10px;
+  // border: none;
+  // box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.03);
+  // background-color: var(--white);
+  // color: var(--black);
+  // font-family: inherit;
+  // padding: 10px 90px 10px 14px;
+  // resize: none;
+  // outline: none;
+  // box-sizing: border-box;
+  // min-height: 68px;
+
   height: 100%;
   width: 100%;
   border-radius: 10px;
   border: none;
-  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.03);
+  // box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.03);
+  padding: 0 90px 0 4px !important;
   background-color: var(--white);
   color: var(--black);
   font-family: inherit;
-  padding: 10px 90px 10px 14px;
   resize: none;
   outline: none;
   box-sizing: border-box;
-  min-height: 68px;
+  border: none !important;
+  box-shadow: none !important;
+}
+
+.chat-input:hover,
+.chat-input:focus {
+  background-color: transparent !important;
+}
+
+.chat-input::placeholder {
+  color: #8b98ad;
+  font-weight: 400;
+  font-size: 15px;
+  font-style: normal;
 }
 
 .chat-input-is-app {
