--- a/app/components/chat.module.scss
+++ b/app/components/chat.module.scss
@@ -646,6 +646,9 @@
     .chat-input-action {
       margin-bottom: 10px;
     }
+    .chat-input-action-is-app {
+      margin-bottom: 10px;
+    }
   }
 }
 
