--- a/app/components/ui-lib.module.scss
+++ b/app/components/ui-lib.module.scss
@@ -89,6 +89,20 @@
   border: 0;
 }
 
+.list-is-app {
+  border: var(--border-in-light);
+  border-radius: 10px;
+  box-shadow: var(--card-shadow);
+  margin-bottom: 20px;
+  animation: slide-in ease 0.3s;
+  background: var(--white);
+  padding: 16px;
+}
+
+.list-is-app .list-item:last-child {
+  border: 0;
+}
+
 .modal-container {
   box-shadow: var(--card-shadow);
   background-color: var(--white);
