--- a/app/components/ui-lib.module.scss
+++ b/app/components/ui-lib.module.scss
@@ -90,6 +90,7 @@
 }
 
 .list-is-app {
+  border: var(--border-in-light);
   border-radius: 16px;
   box-shadow: var(--card-shadow);
   margin-bottom: 20px;
@@ -351,7 +352,6 @@
       max-height: 90vh;
       overflow-x: hidden;
       overflow-y: auto;
-      padding: 16px;
 
       .list-item {
         cursor: pointer;
