--- a/app/components/ui-lib.module.scss
+++ b/app/components/ui-lib.module.scss
@@ -90,6 +90,7 @@
 }
 
 .list-is-app {
+  border: var(--border-in-light);
   border-radius: 16px;
   box-shadow: var(--card-shadow);
   margin-bottom: 20px;
