--- a/app/components/ui-lib.module.scss
+++ b/app/components/ui-lib.module.scss
@@ -76,6 +76,54 @@
   }
 }
 
+.list-item-is-app {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  min-height: 40px;
+  border-bottom: var(--border-in-light);
+  padding: 10px 20px;
+  animation: slide-in ease 0.6s;
+
+  .list-header {
+    display: flex;
+    align-items: center;
+
+    .list-icon {
+      margin-right: 10px;
+    }
+
+    .list-item-title {
+      font-size: 14px;
+      font-weight: bolder;
+    }
+
+    .list-item-title-is-app {
+      font-size: 14px;
+      // font-weight: bolder;
+      color: #383746;
+    }
+
+    .list-item-sub-title {
+      font-size: 12px;
+      font-weight: normal;
+    }
+  }
+
+  &.vertical {
+    flex-direction: column;
+    align-items: start;
+    .list-header {
+      .list-item-title {
+        margin-bottom: 5px;
+      }
+      .list-item-sub-title {
+        margin-bottom: 2px;
+      }
+    }
+  }
+}
+
 .list {
   border: var(--border-in-light);
   border-radius: 10px;
@@ -90,7 +138,7 @@
 }
 
 .list-is-app {
-  border: var(--border-in-light);
+  // border: var(--border-in-light);
   border-radius: 16px;
   box-shadow: var(--card-shadow);
   margin-bottom: 20px;
@@ -98,7 +146,7 @@
   background: var(--white);
 }
 
-.list-is-app .list-item:last-child {
+.list-is-app .list-item-is-app:last-child {
   border: 0;
 }
 
@@ -352,8 +400,9 @@
       max-height: 90vh;
       overflow-x: hidden;
       overflow-y: auto;
+      padding: 16px;
 
-      .list-item {
+      .list-item-is-app {
         cursor: pointer;
         background-color: var(--white);
 
