--- a/app/components/ui-lib.module.scss
+++ b/app/components/ui-lib.module.scss
@@ -82,12 +82,13 @@
   align-items: center;
   min-height: 40px;
   border-bottom: var(--border-in-light);
-  padding: 10px 20px;
+  padding: 10px 0;
   animation: slide-in ease 0.6s;
 
   .list-header {
     display: flex;
     align-items: center;
+    width: calc(100% - 24px);
 
     .list-icon {
       margin-right: 10px;
@@ -102,6 +103,10 @@
       font-size: 14px;
       // font-weight: bolder;
       color: #383746;
+      white-space: nowrap; /* 禁止换行 */
+      overflow: hidden; /* 隐藏溢出的文本 */
+      text-overflow: ellipsis; /* 显示省略号 */
+      width: 100%;
     }
 
     .list-item-sub-title {
@@ -401,6 +406,9 @@
       overflow-x: hidden;
       overflow-y: auto;
       padding: 16px;
+      width: calc(100vw - 48px);
+      margin: 0 24px;
+      box-sizing: border-box;
 
       .list-item-is-app {
         cursor: pointer;
