--- a/app/components/chat.module.scss
+++ b/app/components/chat.module.scss
@@ -58,7 +58,7 @@
     gap: 5px;
   }
 
-  .chat-input-action {
+  .chat-input-action-base {
     display: inline-flex;
     border-radius: 20px;
     font-size: 12px;
@@ -82,6 +82,10 @@
       transition: all ease 0.3s;
       pointer-events: none;
     }
+  }
+
+  .chat-input-action {
+    @extend .chat-input-action-base;
 
     &:hover {
       --delay: 0.5s;
@@ -89,9 +93,14 @@
       transition-delay: var(--delay);
 
       .text {
-        transition-delay: var(--delay);
+        // transition-delay: var(--delay);
         opacity: 1;
         transform: translate(0);
+
+        transition:
+          color 0.2s ease,
+          opacity 0.3s var(--delay),
+          transform 0.3s var(--delay);
       }
     }
 
@@ -100,6 +109,16 @@
       display: flex;
       align-items: center;
       justify-content: center;
+    }
+  }
+
+  .chat-input-action-clicked {
+    @extend .chat-input-action-base;
+
+    border-color: rgba(86, 146, 169, 1) !important;
+
+    .text {
+      color: rgba(86, 146, 169, 1) !important;
     }
   }
 
@@ -119,35 +138,55 @@
     width: var(--icon-width);
     overflow: hidden;
 
-    .text {
-      white-space: nowrap;
-      padding-left: 5px;
-      opacity: 0;
-      transform: translateX(-5px);
-      transition: all ease 0.3s;
-      pointer-events: none;
-    }
-
-    &:hover {
-      --delay: 0.5s;
-      width: var(--full-width);
-      transition-delay: var(--delay);
-      border-color: #28b446 !important;
-
-      .text {
-        transition-delay: var(--delay);
-        opacity: 1;
-        transform: translate(0);
-        color: #28b446 !important;
-      }
-    }
-
     .text,
     .icon {
       display: flex;
       align-items: center;
       justify-content: center;
     }
+  }
+
+  .chat-input-action-is-app .text {
+    white-space: nowrap;
+    padding-left: 5px;
+    opacity: 0;
+    transform: translateX(-5px);
+    transition: all ease 0.3s;
+    pointer-events: none;
+  }
+
+  .chat-input-action-is-app-hover {
+    @extend .chat-input-action-is-app;
+
+    --delay: 0.5s;
+    width: var(--full-width);
+    transition-delay: var(--delay);
+    border-color: #28b446 !important;
+
+    .text {
+      transition-delay: var(--delay);
+      opacity: 1;
+      transform: translate(0);
+      color: #28b446 !important;
+    }
+  }
+
+  .chat-input-action-is-app-clicked {
+    @extend .chat-input-action-is-app;
+
+    border-color: #28b446 !important;
+
+    .text {
+      color: #28b446 !important;
+    }
+  }
+}
+
+.clicked-is-app {
+  border-color: #28b446 !important;
+
+  .text {
+    color: #28b446 !important;
   }
 }
 
