--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -373,15 +373,27 @@ pre {
 .clickable-is-app {
   cursor: pointer;
 
-  .is-hover-show {
+  .is-hover-show-fill {
     svg {
       fill: #6e6c8a !important;
     }
   }
 
-  .is-clicked-show {
+  .is-hover-show-stroke {
+    svg {
+      stroke: #6e6c8a !important;
+    }
+  }
+
+  .is-clicked-show-fill {
     svg {
       fill: rgba(40, 180, 70, 1) !important;
+    }
+  }
+
+  .is-clicked-show-stroke {
+    svg {
+      stroke: rgba(40, 180, 70, 1) !important;
     }
   }
 }
