--- a/app/components/kid/component/kid.module.scss
+++ b/app/components/kid/component/kid.module.scss
@@ -1,113 +1,92 @@
-// Tab组件样式文件
-.tab-container {
+.container {
   width: 100%;
-  height: 100%;
-  // background-color: #f7f7fa;
+  gap: 2px;
   display: flex;
   flex-direction: column;
-  position: relative;
-
-  // 显示滚动条
-  &.show-scrollbar {
-    .tab-content {
-      overflow-y: auto;
-    }
-  }
-
-  // 隐藏滚动条
-  &.hide-scrollbar {
-    .tab-content {
-      overflow-y: auto;
-      -ms-overflow-style: none; /* IE and Edge */
-      scrollbar-width: none; /* Firefox */
-
-      &::-webkit-scrollbar {
-        display: none; /* Chrome, Safari and Opera */
-      }
-    }
-  }
 }
 
-.tab-header {
+.centerContent {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 98px 0 0 0;
+}
+
+.noKidText {
+  margin-top: 6px;
+  color: #9e9db8;
+}
+
+.instructionText {
+  color: #9e9db8;
+}
+
+.createButton {
+  margin-top: 34px;
+  cursor: pointer;
+  background-color: #28b446;
+  padding: 12px 82px;
+  color: white;
+  border-radius: 24px;
+  font-size: 16px;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.listItem {
+  width: 100%;
+  background-color: white;
+  padding: 10px 20px;
+  box-sizing: border-box;
+  display: flex;
+  gap: 16px;
+}
+
+.avatar {
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
   background-color: white;
   flex-shrink: 0;
-  padding: 6px 16px;
-  display: flex;
-  align-items: center;
-  gap: 6px;
 }
 
-.tab-nav {
-  width: 100%;
-  display: flex;
-  overflow-x: auto;
-  padding: 0 1rem;
-  height: 40px;
-  justify-content: center;
-}
-
-.tab-left-button,
-.tab-right-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  flex-shrink: 0;
-}
-
-// Tab按钮
-.tab-button {
-  padding: 6px 8px;
-  font-weight: 500;
-  font-size: 16px;
-  white-space: nowrap;
-  border: none;
-  background: none;
-  cursor: pointer;
-  color: #6b7280;
-  position: relative;
-  transform: translateZ(0);
-
-  &:hover {
-    color: #374151;
-
-    &::after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 50%;
-      height: 2px;
-      background-color: #d1d5db;
-    }
-  }
-
-  &.active {
-    font-size: 18px;
-    font-weight: 600;
-    color: #3a3a47;
-    background-color: white;
-
-    &::after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 50%;
-      height: 2px;
-      background-color: #28b446;
-    }
-  }
-
-  &:focus {
-    outline: none;
-    // box-shadow: 0 0 0 2px rgba(37, 99, 235, 0.2);
-  }
-}
-
-// Tab内容区域
-.tab-content {
+.content {
   flex: 1;
+  min-width: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.name {
+  flex: 1;
+  font-size: 18px;
+  color: #3a3a47;
+  font-weight: 600;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.message {
+  font-size: 16px;
+  color: #6d6c88;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100%;
+}
+
+.actions {
+  display: flex;
+  gap: 16px;
+}
+
+.actionButton {
+  cursor: pointer;
 }
