--- a/app/components/kid/component/select-voice.module.scss
+++ b/app/components/kid/component/select-voice.module.scss
@@ -43,3 +43,77 @@
     }
   }
 }
+
+.voice-item {
+  padding: 16px 16px 0;
+  display: flex;
+  height: 57px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.02);
+  }
+
+  .avatar {
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+    background-color: #d9d9d9;
+    margin-right: 10px;
+    flex-shrink: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 500;
+    color: #666;
+  }
+
+  .content {
+    width: 100%;
+    display: flex;
+    padding-bottom: 12px;
+    border-color: transparent transparent #edecff transparent;
+    border-width: 0 0 1px 0;
+    border-style: solid;
+
+    .info {
+      margin-right: 16px;
+      flex-shrink: 0;
+
+      .voice-name {
+        color: #3a3a47;
+        font-size: 16px;
+        margin-bottom: 2px;
+        font-weight: 400;
+      }
+
+      .voice-type {
+        color: #6d6c88;
+        font-size: 14px;
+      }
+    }
+
+    .actions {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
+      .audio-icon {
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+
+        &:hover {
+          opacity: 0.7;
+        }
+      }
+
+      .selected-text {
+        font-size: 14px;
+        color: #28b446;
+        font-weight: 500;
+      }
+    }
+  }
+}
