--- a/app/components/kid/component/kid.module.scss
+++ b/app/components/kid/component/kid.module.scss
@@ -1,5 +1,6 @@
 .container {
   width: 100%;
+  height: 100%;
   gap: 2px;
   display: flex;
   flex-direction: column;
@@ -11,9 +12,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   gap: 10px;
-  padding: 98px 0 0 0;
+  padding: 98px 10px 0;
+  text-align: center;
+  box-sizing: border-box;
 }
 
 .noKidText {
@@ -85,6 +87,7 @@
 .actions {
   display: flex;
   gap: 16px;
+  align-items: center;
 }
 
 .actionButton {
