--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -13,6 +13,11 @@
   --hover-color: #f3f3f3;
   --bar-color: rgba(0, 0, 0, 0.1);
   --theme-color: var(--gray);
+  --kid-tab-title-color: #6b7280;
+  --kid-tab-title-hover-color: #374151;
+  --kid-item-text-color: #9e9db8;
+  --kid-create-btn-color: #28b446;
+  --kid-select-voice: #f7f7fa;
 
   /* shadow */
   --shadow: 50px 50px 100px 10px rgb(0, 0, 0, 0.1);
@@ -32,6 +37,11 @@
   --primary: rgb(29, 147, 171);
   --second: rgb(27 38 42);
   --hover-color: #323232;
+  --kid-tab-title-color: #d1d5db;
+  --kid-tab-title-hover-color: #cbd5e1;
+  --kid-item-text-color: #e0ddf2;
+  --kid-create-btn-color: #6fdc8c;
+  --kid-select-voice: rgb(30, 30, 30);
 
   --bar-color: rgba(255, 255, 255, 0.1);
 
