--- a/app/components/home-tab.module.scss
+++ b/app/components/home-tab.module.scss
@@ -29,7 +29,7 @@
 }
 
 .tab-header {
-  background-color: white;
+  background-color: var(--white);
   flex-shrink: 0;
   padding: 6px 16px;
   display: flex;
@@ -64,7 +64,7 @@
   border: none;
   background: none;
   cursor: pointer;
-  color: #6b7280;
+  color: var(--kid-tab-title-color);
   position: relative;
   transform: translateZ(0);
 
@@ -79,15 +79,15 @@
       transform: translateX(-50%);
       width: 50%;
       height: 2px;
-      background-color: #d1d5db;
+      background-color: var(-bar-color);
     }
   }
 
   &.active {
     font-size: 18px;
     font-weight: 600;
-    color: #3a3a47;
-    background-color: white;
+    color: var(--black);
+    background-color: var(-bar-color);
 
     &::after {
       content: "";
