--- a/app/components/kid/component/add-or-update-kid.module.scss
+++ b/app/components/kid/component/add-or-update-kid.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  background-color: #f7f7fa;
+  background-color: var(--vhite);
 
   // 显示滚动条
   &.show-scrollbar {
@@ -53,7 +53,7 @@
   white-space: nowrap;
   text-align: left;
   font-size: 18px;
-  color: black;
+  color: var(--black);
 }
 
 .content {
@@ -86,11 +86,12 @@
 }
 
 .card {
-  background-color: white;
+  background-color: var(--white);
   width: 100%;
   padding: 8px 16px;
   border-radius: 16px;
   box-sizing: border-box;
+  border: var(--border-in-light);
 
   &:not(:first-of-type) {
     margin-top: 10px;
@@ -100,7 +101,7 @@
 .cardRow {
   display: flex;
   padding: 11px 0;
-  color: black;
+  color: var(--black);
   width: 100%;
   align-items: center;
   gap: 20px;
@@ -110,6 +111,18 @@
   font-size: 17px;
   font-weight: 400;
   flex-shrink: 0;
+  color: var(--black);
+}
+
+.cardText {
+  font-size: 17px;
+  font-weight: 400;
+  flex-shrink: 0;
+  color: var(--black);
+  flex: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .textClamp {
@@ -126,6 +139,7 @@
   background-color: var(--white);
   max-width: 100% !important;
   font-size: 17px;
+  color: var(--black);
 
   &.textLeft {
     text-align: left;
