--- a/app/components/kid/component/select-voice.module.scss
+++ b/app/components/kid/component/select-voice.module.scss
@@ -21,6 +21,7 @@
     white-space: nowrap;
     text-align: left;
     font-size: 18px;
+    color: var(--black);
   }
 
   .complete-button {
@@ -58,7 +59,6 @@
     width: 48px;
     height: 48px;
     border-radius: 50%;
-    background-color: #d9d9d9;
     margin-right: 10px;
     flex-shrink: 0;
     display: flex;
