--- a/app/components/kid/component/realtime.module.scss
+++ b/app/components/kid/component/realtime.module.scss
@@ -1,11 +1,12 @@
 .waves {
   position: absolute;
   width: 100%;
-  height: 100px;
+  height: 200px;
   min-height: 100px;
-  max-height: 150px;
+  max-height: 200px;
   left: 0;
   bottom: 0;
+  z-index: 0;
 }
 
 .parallax > use {
