更改实时通话UI

--- a/app/components/kid/component/kid.module.scss
+++ b/app/components/kid/component/kid.module.scss
@@ -75,7 +75,7 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  color: var(--kid-tab-title-color);
+  color: var(--kid-item-color);
 }
 
 .message {
