--- a/app/styles/globals.scss
+++ b/app/styles/globals.scss
@@ -18,6 +18,7 @@
   --kid-item-text-color: #9e9db8;
   --kid-create-btn-color: #28b446;
   --kid-select-voice: #f7f7fa;
+  --kid-item-color: #3a3a47;
 
   /* shadow */
   --shadow: 50px 50px 100px 10px rgb(0, 0, 0, 0.1);
@@ -42,6 +43,7 @@
   --kid-item-text-color: #e0ddf2;
   --kid-create-btn-color: #6fdc8c;
   --kid-select-voice: rgb(30, 30, 30);
+  --kid-item-color: #5a5a6e;
 
   --bar-color: rgba(255, 255, 255, 0.1);
 
