--- a/app/components/kid/component/add-or-update-kid.module.scss
+++ b/app/components/kid/component/add-or-update-kid.module.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  background-color: var(--vhite);
+  background-color: var(--kid-select-voice);
 
   // 显示滚动条
   &.show-scrollbar {
