--- a/app/components/kid/component/realtime.module.scss
+++ b/app/components/kid/component/realtime.module.scss
@@ -54,3 +54,64 @@
     transform: translateX(-50%);
   }
 }
+
+// ----
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 11px;
+}
+
+.dots {
+  display: flex;
+  gap: 15px;
+  align-items: center;
+  height: 20px;
+}
+
+.dot {
+  width: 12px;
+  height: 12px;
+  background: #6d6c88;
+  border-radius: 50%;
+  transform-origin: center;
+  animation-name: scaleUpDown;
+  animation-duration: 1.2s;
+  animation-iteration-count: infinite;
+  animation-timing-function: ease-in-out;
+  animation-play-state: paused;
+}
+
+.dot1 {
+  animation-delay: 0s;
+}
+
+.dot2 {
+  animation-delay: 0.4s;
+}
+
+.dot3 {
+  animation-delay: 0.8s;
+}
+
+@keyframes scaleUpDown {
+  0%,
+  100% {
+    transform: scale(1);
+    opacity: 0.6;
+  }
+  50% {
+    transform: scale(1.5);
+    opacity: 1;
+  }
+}
+
+.active .dot {
+  animation-play-state: running;
+}
+
+.text {
+  font-size: 14px;
+  color: #6d6c88;
+}
